Fixed broken layout on long bib view nodes

--- a/static/less/bibview.less
+++ b/static/less/bibview.less
@@ -28,6 +28,7 @@
 	}
 	.node {
 		list-style-type: square;
+		max-width: 785px;
 	}
 	.node.auth {
 		list-style: none;
